--- a/lib/views/orders.html.erb
+++ b/lib/views/orders.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>orders</title>
+    <title>books</title>
   </head>
   <body>
     <h1>Orders</h1>
@@ -20,6 +20,40 @@
       </span>
       <br>
     <% end %>
+
+    <form id="create-book" method="post">
+     <label for="book">Book:</label>
+      <select name="book" form="create-book">
+        <% @library.books.uniq(&:title).each do |book| %>
+          <option value="<%= book.title %>">
+            <%= book.title %>
+          </option>
+        <% end %>
+      </select>
+      <br>
+      <br>
+      <label for="reader">Reader:</label>
+      <select name="reader" form="create-reader">
+        <% @library.readers.uniq(&:email).each do |reader| %>
+          <option value="<%= reader.email %>">
+            <%= reader.email %>
+          </option>
+        <% end %>
+      </select>
+      <br>
+      <br>
+          <label for="date">Date:</label>
+      <select name="date" form="create-reader">
+          <option value="<%= Time.now %>">
+            <%= Time.now %>
+          </option>
+
+      </select>
+
+      <input type="submit" value="Save">
+    </form>
+
+
     <a href="/">BACK TO MAIN</a>
   </body>
 </html>
