--- a/lib/views/readers.html.erb
+++ b/lib/views/readers.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>readers</title>
+    <title>authors</title>
   </head>
   <body>
     <h1>Readers</h1>
@@ -9,6 +9,36 @@
       <%= reader.email %>
     <br>
     <% end %>
-  <a href="/">BACK TO MAIN</a>
+    <form method="post">
+      <label for="name">Name:</label>
+      <br>
+      <input id="name" type="text" name="name">
+      <br>
+
+      <label for="email">Email:</label>
+      <br>
+      <input id="email" type="text" name="email">
+      <br>
+
+      <label for="city">City:</label>
+      <br>
+      <input id="city" type="text" name="city">
+      <br>
+
+      <label for="street">Street:</label>
+      <br>
+      <input id="street" type="text" name="street">
+      <br>
+
+      <label for="house">House:</label>
+      <br>
+      <input id="house" type="text" name="house">
+      <br>
+      <br>
+
+      <input type="submit" value="Save">
+    </form>
+    <br>
+    <a href="/">BACK TO MAIN</a>
   </body>
 </html>
