--- a/lib/views/readers.html.erb
+++ b/lib/views/readers.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Readers</h1>
-    <% @library.readers.uniq(&:email).map do |reader| %>
+    <% @library.readers.uniq(&:email).each do |reader| %>
       <%= reader.email %>
     <br>
     <% end %>
@@ -32,7 +32,7 @@
 
       <label for="house">House:</label>
       <br>
-      <input id="house" type="text" name="house">
+      <input id="house" type="number" name="house">
       <br>
       <br>
 
